[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SNC"
authors = [{name = "Hsiang-Jen Li", email = "hsiangjenli@gmail.com"}]
dynamic = ["version", "description"]
dependencies = ["requests", "beautifulsoup4", "pytest-playwright", "pydantic"]

[project.urls]
Home = "http://hsiangjenli.github.io/social-network-crawler"
